cmake_minimum_required(VERSION 2.8)
option(BUILD_SUBDIR1 "Enable building libzipc.so" ON)
option(BUILD_SUBDIR2 "Enable building libdaemon.so" ON)
option(BUILD_SUBDIR3 "Enable building server" ON)
option(BUILD_SUBDIR4 "Enable building test client" ON)

if(BUILD_SUBDIR1)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libzipc)
endif()
if(BUILD_SUBDIR2)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libdaemon)
endif()
if(BUILD_SUBDIR1)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server)
endif()
if(BUILD_SUBDIR2)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/client)
endif()