cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)
project(daemon DESCRIPTION "Test library")
add_library(daemon SHARED daemon.c)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libzipc /usr/include)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libzipc /usr/lib)
target_link_libraries(daemon zipc)
set_target_properties(daemon PROPERTIES SOVERSION 1 PUBLIC_HEADER daemon.h)
install(TARGETS daemon LIBRARY DESTINATION /usr/lib PUBLIC_HEADER DESTINATION /usr/include)